src/test/ui/error-codes/E0458.stderr
error[E0458]: unknown kind: `wonderful_unicorn`
  --> $DIR/E0458.rs:1:8
   |
LL | #[link(kind = "wonderful_unicorn")] extern {}
   | -------^^^^^^^^^^^^^^^^^^^^^^^^^^--
   |        |
   |        unknown kind

error[E0459]: #[link(...)] specified without `name = "foo"`
  --> $DIR/E0458.rs:1:1
   |
LL | #[link(kind = "wonderful_unicorn")] extern {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ missing `name` argument

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0458, E0459.
For more information about an error, try `rustc --explain E0458`.
